<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_easiridelogo"
            android:iconTint="@android:color/black"
            android:title="@string/book_ride" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_trip_24dp"
            android:title="@string/your_trip" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_payment_24dp"
            android:title="@string/payments" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_notifications_24dp"
            android:title="@string/notification" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_profilek_24dp"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>
