<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.eziride.rider.MapDemo"
        android:label="@string/book_ride"
        tools:layout="@layout/fragment_map_demo" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.eziride.rider.ui.gallery.GalleryFragment"
        android:label="@string/your_trip"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.eziride.rider.ui.slideshow.SlideshowFragment"
        android:label="@string/payments"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.eziride.rider.ui.tools.ToolsFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.eziride.rider.ui.share.ShareFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.eziride.rider.ui.send.SendFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_send" />
</navigation>